active subpage underline visibility fixed

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -29,6 +29,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
+  margin: 0;
 }
 
 h1, h2, h3, h4, h5 {
